package com.example.ocp.demolspbeveragemanager.coffeecomponent;

public abstract class Beverage {
    String description = "Unknown Beverage";

    public String getDescription() {
        return description;
    }

    public abstract double cost();
}