@startuml

title __DEMOLSPBEVERAGEMANAGER's Class Diagram__\n

   namespace com.example.ocp.demolspbeveragemanager {
      namespace coffeecomponent {
        abstract class com.example.ocp.demolspbeveragemanager.coffeecomponent.Beverage {
            ~ description : String
            {abstract} + cost()
            + getDescription()
        }
      }
    }

    namespace com.example.ocp.demolspbeveragemanager {
      namespace coffeetype {
        class com.example.ocp.demolspbeveragemanager.coffeetype.DarkRoast {
            + cost()
            + getDescription()
        }
      }
    }


    namespace com.example.ocp.demolspbeveragemanager {
      namespace coffeetype {
        class com.example.ocp.demolspbeveragemanager.coffeetype.Espresso {
            + cost()
            + getDescription()
        }
      }
    }


    namespace com.example.ocp.demolspbeveragemanager {
      namespace coffeetype {
        class com.example.ocp.demolspbeveragemanager.coffeetype.HouseBlend {
            + cost()
            + getDescription()
        }
      }
    }


    com.example.ocp.demolspbeveragemanager.coffeetype.DarkRoast -up-|> com.example.ocp.demolspbeveragemanager.coffeecomponent.Beverage
    com.example.ocp.demolspbeveragemanager.coffeetype.Espresso -up-|> com.example.ocp.demolspbeveragemanager.coffeecomponent.Beverage
    com.example.ocp.demolspbeveragemanager.coffeetype.HouseBlend -up-|> com.example.ocp.demolspbeveragemanager.coffeecomponent.Beverage



right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
